@@ -20,6 +20,9 @@ terminate running daemon with core for debugging.
 \fBactivate\fR \fIext\fR \fIipaddr\fR
 register a static sip extension manually on a fixed address.
 .TP
+\fBcalls\fR
+list active call sessions on the server.
+.TP
 \fBcheck\fR
 verify running daemon for deadlocks or other problems.
 .TP
