@@ -1,5 +1,7 @@
 From version 0.3.11 to 0.3.12
 - xmlrpc support in cgi util.
+- proper cdr initialization.
+- call maps and display of active calls added.
 
 From version 0.3.10 to 0.3.11
 - fix for garbage collection issue in registration re-use.
